--- a/tecolotl-web/src/main/webapp/resources/css/profesor/gramatica.css
+++ b/tecolotl-web/src/main/webapp/resources/css/profesor/gramatica.css
@@ -75,3 +75,31 @@ ul{
     background: #4CAF50;
     cursor: pointer;
 }
+
+.boton-maestro-base2{
+    background-color: var(--color-nav-primary);
+    padding: 8px 25px;
+    color:white;
+    font-weight: bold;
+    border-style: solid;
+    border-width: 3px;
+    border-radius: 20px;
+    text-align: center;
+    display: inline-block;
+    margin-top: 10px;
+    font-size: 14px;
+    text-transform: uppercase;
+}
+
+.boton-maestro-base2:hover{
+    text-decoration: none;
+    background-color: var(--color-barra-nav);
+    color: white;
+}
+
+.boton-regresa2{
+    display: flex;
+    justify-content: flex-end;
+    align-content: flex-end;
+    flex-wrap: wrap;
+}
