--- a/tecolotl-web/src/main/webapp/resources/css/alumno/template-alumno.css
+++ b/tecolotl-web/src/main/webapp/resources/css/alumno/template-alumno.css
@@ -482,7 +482,6 @@ iframe {
 .boton-enviar{
     background: #CB4335;
     color: white;
-    width: 110px;
     text-align: center;
     margin-top: 10px;
     border-radius: 12px;
@@ -490,6 +489,8 @@ iframe {
     font-weight: bold;
     font-size: 16px;
     display: block;
+    padding-right: 20px;
+    padding-left: 20px;
 }
 
 .boton-trasladar{
