glosario he imagen de vacio

--- a/tecolotl-web/src/main/webapp/resources/css/alumno/order-sentences.css
+++ b/tecolotl-web/src/main/webapp/resources/css/alumno/order-sentences.css
@@ -293,6 +293,7 @@
     flex-wrap: wrap;
     align-items: center;
     justify-content: center;
+    background-color: white;
 }
 .imagen-relacionar img{
     width: 100%;
