--- a/tecolotl-web/src/main/webapp/resources/css/alumno/glosario.css
+++ b/tecolotl-web/src/main/webapp/resources/css/alumno/glosario.css
@@ -19,6 +19,10 @@
     width: 100%;
     height: auto;
 }
+.cargando{
+    width: 25%;
+    height: auto;
+}
 
 .tam-card{
     width: 60%;
@@ -28,4 +32,5 @@
 .contenedor-img{
     display: flex;
     align-items: center;
+    justify-content: center;
 }
