--- a/tecolotl-web/src/main/webapp/resources/css/error/sin-permiso.css
+++ b/tecolotl-web/src/main/webapp/resources/css/error/sin-permiso.css
@@ -11,19 +11,34 @@ body{
     height: 100vh;
     justify-content: center;
     align-content: center;
-    flex-direction: row;
-    flex-wrap: wrap;
+    flex-direction: column;
 }
 
-h1{
+p{
+    font-size: 25px;
     text-align: center;
     color: #1E87F0;
     width: 100%;
 }
 
 img{
-    display: block;
-    width: 25%;
+    transform: scale(0.8);
+}
+
+.btnsin-permiso{
+    background-color: #a56192;
+    color: white;
+    border: 4px solid #8868b3;
+    border-radius: 35px;
+    padding-left: 40px;
+    padding-right: 40px;
+    height: 50px;
+    text-transform: uppercase;
+    font-weight: bold;
+    font-size: 25px;
+}
+
+.centrado{
     display: flex;
     justify-content: center;
 }
