--- a/tecolotl-web/src/main/webapp/resources/css/profesor/admin-alumnos.css
+++ b/tecolotl-web/src/main/webapp/resources/css/profesor/admin-alumnos.css
@@ -16,7 +16,7 @@
 progress{
     width: 120px;
     height: 18px;
-    background-color: white;
+    background-color: #1665B4;
     /*border-radius: 5px;*/
     border: 1px solid black;
 }
@@ -25,7 +25,7 @@ progress:indeterminate{
 }
 
 progress::-webkit-progress-bar {
-    background-color: #f8f8f8;
+    background-color: #1665B4;
     /*border-radius: 5px;*/
     overflow: hidden;
 }
@@ -139,7 +139,7 @@ progress[value]{
     width: 200px;
     height: 40px;
     border-radius: 20px;
-    border: solid 2px #1665B4;
+    border: solid 3px #1665B4;
     overflow: hidden;
 }
 
@@ -157,14 +157,14 @@ progress[value]{
     padding-right: 10px;
 }
 
-.uk-margin > div > div:nth-child(8) > label + div > svg{
-    width: 100%;
+.uk-margin > div > div:nth-child(8) > div > span{
+    font-weight: bold;
+    position: absolute;
+    left: 34%;
+    font-size: 25px;
+    color: white;
 }
 
-.uk-margin > div > div:nth-child(8) > label + div > svg > .caja{
-    fill: #1E87F0 !important;
-}
-
-.uk-margin > div > div:nth-child(8) > label + div > svg > .progreso{
-    fill: #1665B4 !important;
+.uk-margin > div > div:nth-child(8) > div{
+    position: relative;
 }
