--- a/tecolotl-web/src/main/webapp/resources/css/esquadron.css
+++ b/tecolotl-web/src/main/webapp/resources/css/esquadron.css
@@ -394,6 +394,9 @@ input[type=text]:focus,input[type=email]:focus,input[type=password]:focus,select
   /*text-align: center !important;*/
   border-bottom: 2px solid #000;
 }
+.tablaPrimaria > tbody > tr{
+  border-bottom: 2px solid #000;
+}
 .borde-top-azul{
   /*text-align: center;*/
   border-top : 4px solid var(--color-nav-primary);
