--- a/tecolotl-web/src/main/webapp/resources/css/profesor/admin-alumnos.css
+++ b/tecolotl-web/src/main/webapp/resources/css/profesor/admin-alumnos.css
@@ -16,7 +16,7 @@
 progress{
     width: 120px;
     height: 18px;
-    background-color: #1665B4;
+    background-color: #00a8ec;
     /*border-radius: 5px;*/
     border: 1px solid black;
 }
@@ -25,7 +25,7 @@ progress:indeterminate{
 }
 
 progress::-webkit-progress-bar {
-    background-color: #1665B4;
+    background-color: #00a8ec;
     /*border-radius: 5px;*/
     overflow: hidden;
 }
@@ -40,16 +40,16 @@ progress:indeterminate::-moz-progress-bar {
  * 1. Remove right border in IE11 and Edge
  */
 progress::-webkit-progress-value {
-    background-color: #1e87f0;
+    background-color: #0079b9;
     transition: width 0.6s ease;
 }
 
 progress::-moz-progress-bar {
-    background-color: #1e87f0;
+    background-color: #0079b9;
 }
 
 progress::-ms-fill {
-    background-color: #1e87f0;
+    background-color: #0079b9;
     transition: width 0.6s ease;
     /* 1 */
     border: 0;
@@ -139,7 +139,7 @@ progress[value]{
     width: 200px;
     height: 40px;
     border-radius: 20px;
-    border: solid 3px #1665B4;
+    border: solid 3px #00a8ec;
     overflow: hidden;
 }
 
@@ -161,7 +161,8 @@ progress[value]{
     font-weight: bold;
     position: absolute;
     left: 34%;
-    font-size: 25px;
+    top: 3%;
+    font-size: 22px;
     color: white;
 }
 
