--- a/tecolotl-web/src/main/webapp/resources/css/profesor/csv-alumnos.css
+++ b/tecolotl-web/src/main/webapp/resources/css/profesor/csv-alumnos.css
@@ -2,6 +2,12 @@ table input[type="text"]{
     width: 80px;
     border-color: #E31A1A !important;
 }
+.botones{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+}
 
 .botones input[type="file"]{
     display: block;
