--- a/tecolotl-web/src/main/webapp/resources/css/profesor/csv-alumnos.css
+++ b/tecolotl-web/src/main/webapp/resources/css/profesor/csv-alumnos.css
@@ -1,26 +1,48 @@
+
 table input[type="text"]{
     width: 80px;
     border-color: #E31A1A !important;
 }
+
 .botones{
     display: flex;
-    flex-wrap: wrap;
     justify-content: center;
-    align-items: center;
+    flex-wrap: wrap;
+    flex-direction: column;
 }
+.botones > div{
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+.botones > div > span{
+    margin-top: 3px;
+    margin-left: 3px;
+    font-weight: bold;
+}
+
+.botones > div > .titulo-section{
+    width: 70%;
+    height: 26px;
+}
+
 
 .botones input[type="file"]{
     display: block;
 }
-.botones > div{
-    display: inline-block;
-    padding: 5px;
-    height: auto;
-    border: 2px solid var(--color-nav-primary);
-    border-radius: 5px;
-    box-shadow: 3px 3px 12px #999999;
+.botones label{
+    display: inline-flex;
+    height: 30px;
+    width: 60%;
+    border: 2px solid #0e6dcd;
+    border-radius: 30px;
+    margin-top: 10px;
+    justify-content: center;
+    font-size: 18px;
+    font-weight: bold;
 }
-.botones div > p,.botones div > input{
+
+.botones div > p,.botones div > label{
     margin-bottom: 50px;
 }
 .botones progress{
@@ -32,6 +54,8 @@ table input[type="text"]{
     background: darkgrey;
     border-radius: 8px;
     overflow: hidden;
+    width: 60%;
+    margin-top: 10px;
 }
 
 .botones progress::-webkit-progress-bar{
@@ -78,4 +102,61 @@ table input[type="text"]{
 
     border-radius: 2px;
     background-size: 35px 20px, 100% 100%, 100% 100%;
+}
+
+.file {
+    position: relative;
+    display: inline-block;
+    cursor: pointer;
+    height: 30px;
+}
+.file input {
+    min-width: 14rem;
+    margin: 0;
+    filter: alpha(opacity=0);
+    opacity: 0;
+}
+.file-custom {
+    position: absolute;
+    top: 0;
+    right: 0;
+    left: 0;
+    z-index: 5;
+    height: 30px;
+    padding: 3px;
+    line-height: 1.5;
+    color: #555;
+    background-color: #fff;
+    border: 1px solid #ddd;
+    border-radius: .25rem;
+    box-shadow: inset 0 1.5px 2px rgba(0,0,0,.05);
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
+.file-custom:after {
+    content: "Choose file...";
+}
+.file-custom:before {
+    position: absolute;
+    top: -1px;
+    right: -1px;
+    bottom: -1px;
+    z-index: 6;
+    display: block;
+    content: "Browse";
+    height: 30px;
+    padding: 3px;
+    line-height: 1.5;
+    color: #555;
+    background-color: #eee;
+    border: 1px solid #ddd;
+    border-radius: 0 .25rem .25rem 0;
+}
+
+
+/* Focus */
+.file input:focus ~ .file-custom {
+    box-shadow: 0 0 0 .075rem #fff, 0 0 0 .2rem #0074d9;
 }
