--- a/tecolotl-web/src/main/webapp/resources/css/profesor/admin-alumnos.css
+++ b/tecolotl-web/src/main/webapp/resources/css/profesor/admin-alumnos.css
@@ -173,12 +173,13 @@ progress[value]{
 .borde-menu1 > form > input + input{
     color: #1665B4;
     text-transform: uppercase;
-    background: white;
+    background: transparent;
     border: 3px solid var(--color-nav-primary);
     border-radius: 5px;
     font-weight: bold;
     padding-bottom: 10px;
     padding-top: 8px;
     margin-top: 19px;
+    margin-left: 1078px;
 
 }
