--- a/tecolotl-web/src/main/webapp/resources/css/profesor/admin-alumnos.css
+++ b/tecolotl-web/src/main/webapp/resources/css/profesor/admin-alumnos.css
@@ -170,16 +170,24 @@ progress[value]{
     position: relative;
 }
 
-.borde-menu1 > form > input + input{
+.borde-menu2 > form > input + input{
     color: #1665B4;
     text-transform: uppercase;
     background: transparent;
     border: 3px solid var(--color-nav-primary);
     border-radius: 5px;
-    font-weight: bold;
+    font-weight: 800;
     padding-bottom: 10px;
     padding-top: 8px;
-    margin-top: 19px;
-    margin-left: 1078px;
-
 }
+
+.borde-menu2{
+    height: 28px;
+    width: 130px;
+    border-radius: 5px;
+    font-weight: bold;
+    padding-top: 7px;
+    margin-top: 19px;
+    left: 125%;
+}
+
