implementación de migas de pan en las vistas pricipales de profesor.

--- a/tecolotl-web/src/main/webapp/resources/css/profesor/calificacion.css
+++ b/tecolotl-web/src/main/webapp/resources/css/profesor/calificacion.css
@@ -165,7 +165,7 @@
 h1{
     font-size: 30px;
     font-weight: bold;
-    text-align: center;
+    /*text-align: center;*/
 }
 
 [class^="bmap-"] + span{
