--- a/tecolotl-web/src/main/webapp/resources/css/profesor/mapa-mental.css
+++ b/tecolotl-web/src/main/webapp/resources/css/profesor/mapa-mental.css
@@ -24,3 +24,19 @@
     background-color: var(--color-barra-nav);
     color: white;
 }
+
+.boton-cerrar{
+    border: 3px solid var(--color-nav-primary);
+    height: 21px;
+    width: 130px;
+    border-radius: 5px;
+    font-weight: bold!important;
+    padding-top: 7px !important;
+    margin-top: 19px !important;
+    text-align: center;
+    left: 19%;
+}
+
+.borde-cerrar > form > a{
+    color: #1665B4;
+}
