--- a/tecolotl-web/src/main/webapp/resources/css/profesor/calificacion.css
+++ b/tecolotl-web/src/main/webapp/resources/css/profesor/calificacion.css
@@ -73,7 +73,7 @@
     width: 100%;
 }
 
-.mapa-mental > div{
+.mapa-mental > div > div{
     padding-bottom: 10px;
     border-bottom: 8px solid #0e6dcd;
 }
@@ -180,6 +180,31 @@ h1{
 
 .uk-position-relative > div + a{
     margin-left: 30%;
+}
+
+.boton-maestro-base{
+    background-color: var(--color-nav-primary);
+    padding: 8px 25px;
+    color:white;
+    font-weight: bold;
+    border-style: solid;
+    border-width: 3px;
+    border-radius: 20px;
+    text-align: center;
+    display: inline-block;
+    margin-top: 10px;
+    font-size: 14px;
+    text-transform: uppercase;
+}
+
+.boton-maestro-base:hover{
+    text-decoration: none;
+    background-color: var(--color-barra-nav);
+    color: white;
+}
+
+.botones > .boton-maestro-base{
+    margin-left: 15px;
 }
 
 /*.mapa-mental form .boton-escuadron-base{*/
