--- a/tecolotl-web/src/main/webapp/resources/css/error/no-manejable.css
+++ b/tecolotl-web/src/main/webapp/resources/css/error/no-manejable.css
@@ -27,3 +27,21 @@ img{
     display: flex;
     justify-content: center;
 }
+
+.btnsin-permiso{
+    background-color: #a56192;
+    color: white;
+    border: 4px solid #8868b3;
+    border-radius: 35px;
+    padding-left: 40px;
+    padding-right: 40px;
+    height: 50px;
+    text-transform: uppercase;
+    font-weight: bold;
+    font-size: 25px;
+}
+
+.centrado{
+    display: flex;
+    justify-content: center;
+}
