--- a/tecolotl-web/src/main/webapp/resources/css/ingreso.css
+++ b/tecolotl-web/src/main/webapp/resources/css/ingreso.css
@@ -116,3 +116,10 @@ ul.login-menu > li > a:hover{
         width: 100% !important;
     }
 }
+
+@media screen and (max-width: 500px){
+    body{
+        height: 150vh;
+        width: 114vw;
+    }
+}
