implementacion de bordes en mapa mental4 y sus placeholder de escriba texto, dar un width a los contenedores de relacionar imagen-palabra y quitar un 1 que estaba en el archivo activity.

--- a/tecolotl-web/src/main/webapp/resources/css/alumno/order-sentences.css
+++ b/tecolotl-web/src/main/webapp/resources/css/alumno/order-sentences.css
@@ -311,7 +311,8 @@
 }
 
 .oraciones-relacion-img{
-    height: 50px;
+    height: auto;
+    min-height: 50px;
     padding-left: 10px;
     border: 5px solid #D35400;
     background-color: white;
